# tt-transfer

./: .gitignore  README.md  db.sqlite3  index.html  manage.py  pyproject.toml  requirements.txt  temp.xlsx
api/: excel.py  exceptions.py  mail.py  middlewares.py  permissions.py  request.py  urls.py
api/activityFeed/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/address/: admin.py  apps.py  create_cities.py  map_api.py  models.py  search_indexes.py  serializers.py  urls.py  views.py
api/adminInterface/: apps.py  urls.py  views.py
api/authentication/: admin.py  apps.py  email.py  manager.py  models.py  serializers.py  urls.py  views.py
api/calculator/: apps.py  controllers.py  route.py  urls.py  views.py
api/cars/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/drivers/: admin.py  apps.py  models.py  urls.py  views.py
api/excel_snippets/: tariff_snippet.numbers  tariff_snippet.xlsx
api/manager/: apps.py  urls.py  views.py
api/orders/: apps.py  models.py  serializers.py  urls.py  views.py
api/profile/: admin.py  apps.py  email.py  models.py  serializers.py  urls.py  views.py
api/smartFilter/: apps.py  filters.py  search.py  urls.py  views.py
api/tariffs/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
api/user_requests/: apps.py  models.py
frontend/: package-lock.json  package.json  urls.py  webpack.config.js
frontend/src/: App.js  index.js
map/: urls.py  views.py
map/templates/: index.html  route.html  (+1 more)
source/: models.dmm
tt_transfer/: asgi.py  settings.py  urls.py  wsgi.py
(+167 files in other folders)
