[tool.poetry]
name = "tt-transfer"
version = "0.1.0"
description = ""
authors = ["iizhukov <iizhukov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.0.6"
django-channels = "0.7.0"
django-cml = "0.4.0"
django-cors-headers = "3.13.0"
django-elasticsearch-dsl = "7.2.2"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.2.0"
elasticsearch = "7.17.6"
elasticsearch-dsl = "7.4.0"
fuzzysearch = "0.7.3"
fuzzywuzzy = "0.18.0"
openpyxl = "3.0.10"
pillow = "9.2.0"
psycopg2 = "2.9.3"
pyopenssl = "22.0.0"
python-levenshtein = "0.12.2"
python-slugify = "6.1.2"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
shapely = "1.8.2"
dadata = "^21.10.1"
validate-email = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
